--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy
-torch
-torchvision
-tqdm
-matplotlib
-seaborn
-scipy 
+numpy==1.26.4
+torch==2.2.2
+torchvision==0.17.2
+tqdm==4.67.1
+matplotlib==3.10.3
+seaborn==0.13.2
+scipy==1.15.3 
