Refactor main_runner.py for improved error handling and logging. Update README to reflect project status and enhancements. Improve data handling and validation in src modules, ensuring better compatibility and performance.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-numpy==1.26.4
-torch==2.2.2
-torchvision==0.17.2
-tqdm==4.67.1
-matplotlib==3.10.3
-seaborn==0.13.2
-scipy==1.15.3 
+# Core ML Dependencies
+numpy>=1.26.4,<2.0.0
+torch>=2.2.2,<3.0.0
+torchvision>=0.17.2,<1.0.0
+
+# Visualization and Analysis
+matplotlib>=3.10.3,<4.0.0
+seaborn>=0.13.2,<1.0.0
+
+# Scientific Computing
+scipy>=1.15.3,<2.0.0
+
+# Progress Bars and User Experience
+tqdm>=4.67.1,<5.0.0
+
+# Development and Quality (optional but recommended)
+# Uncomment for development:
+# pytest>=8.0.0,<9.0.0
+# black>=24.0.0,<25.0.0
+# mypy>=1.8.0,<2.0.0
+# flake8>=7.0.0,<8.0.0 
