--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ venv.bak/
 
 # VSCode project settings
 .vscode/
+*.code-workspace
 
 # mkdocs documentation
 /site
@@ -135,6 +136,9 @@ dmypy.json
 # Environments
 .python-version
 
+# Pre-commit hooks
+.pre-commit-config.yaml
+
 # OSX / macOS
 .DS_Store
 .AppleDouble
@@ -142,19 +146,140 @@ dmypy.json
 # Thumbnails
 ._*
 # Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
 .Spotlight-V100
+.TemporaryItems
 .Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
 # Windows
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+# Windows shortcuts
+*.lnk
+
 # Linux
 .*~
+*~
 
-# Custom
-*outputs*/ 
+# Project-specific outputs
+*outputs*/
 *data*/
+
+# CIFAR data directories
+/tmp/cifar/
+cifar-10-batches-py/
+cifar-10-python.tar.gz
+
+# Project-specific temporary files
+*.pkl
+*.pt
+*.pth
+checkpoints_*/
+scores_*/
+plots_*/
+losses_*/
+
+# Legacy/development files
 cifar_quickstart_lds.ipynb
 cifar_quickstart_magic.ipynb
 lds.py
 magic.py
+
+# Editor temporary files
+*.swp
+*.swo
+*~
+
+# Backup files
+*.bak
+*.backup
+*.orig
+
+# Log files
+*.log
+*.out
+*.err
+
+# Profiling data
+*.prof
+*.cprof
+
+# Database files
+*.db
+*.sqlite
+
+# Archive files
+*.zip
+*.tar
+*.tar.gz
+*.tar.bz2
+*.tar.xz
+*.rar
+*.7z
+
+# Temporary directories
+tmp/
+temp/
+.tmp/
+
+# Node.js (in case of web frontend)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Package management
+Pipfile.lock
+poetry.lock
+
+# Virtual environment managers
+.virtualenv
+.pipenv
+.conda
+conda-meta/
+
+# Performance profiling
+perf.data*
+
+# Security and credentials
+.env.local
+.env.*.local
+secrets.json
+credentials.json
+*.key
+*.pem
+*.crt
+
+# IDE and editor files
+*.sublime-*
+.spyder/
+.vscode/settings.json
+.vscode/launch.json
+
+# Documentation build
+docs/build/
+site/
+
+# Configuration overrides
+config_local.py
+local_config.py
+
+# Development and debugging
+debug_*
+scratch_*
+playground_*
+
+# Archive
+archive/
