command-line interface and documents

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,17 +1,15 @@
 [tool:pytest]
+minversion = 6.0
+addopts = -ra -q --strict-markers
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = 
-    -v
-    --tb=short
-    --color=yes
 markers =
-    unit: Unit tests
-    integration: Integration tests
-    e2e: End-to-end tests
-    slow: Slow running tests
+    unit: marks tests as unit tests (fast, isolated)
+    integration: marks tests as integration tests (slower, cross-component)
+    slow: marks tests as slow running (performance, stress tests)
+    e2e: marks tests as end-to-end tests (full system)
 filterwarnings =
     ignore::UserWarning
     ignore::DeprecationWarning 
