Enhance logging and error handling in main_runner.py by adding a file handler for run logs. Refactor run directory initialization logic for clarity and improved error messages.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 minversion = 6.0
 addopts = -ra -q --strict-markers
 testpaths = tests
@@ -10,6 +10,7 @@ markers =
     integration: marks tests as integration tests (slower, cross-component)
     slow: marks tests as slow running (performance, stress tests)
     e2e: marks tests as end-to-end tests (full system)
+    quality_integration: marks tests as quality integration tests (specific heavy E2E)
 filterwarnings =
     ignore::UserWarning
     ignore::DeprecationWarning 
