--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,4 @@ scipy>=1.15.3,<2.0.0
 
 # Progress Bars and User Experience
 tqdm>=4.67.1,<5.0.0
-
-# Development and Quality (optional but recommended)
-# Uncomment for development:
-# pytest>=8.0.0,<9.0.0
-# black>=24.0.0,<25.0.0
-# mypy>=1.8.0,<2.0.0
-# flake8>=7.0.0,<8.0.0 
+psutil>=5.9.0,<6.0.0
